# wavemusic

./: .gitattributes  .gitignore  Makefile  README.md  main.py  play.sh  pyproject.toml  requirements.txt  setup.py  simplest.py
examples/: simple.cpp  simpler.py  simplest.py
scripts/: gui.py  music.py  note.py  part_gui.py  simpler.py  simplest.py  utils.py  waveforms.py
sheets/: debug.wmusic  pokemoncentre.wmusic  summers_end.wmusic  twsxxn.txt  twsxxn.wmusic
src/: debug.wmusic  pokemoncentre.wmusic  sigen.cpp  sigen.h  simple.cpp  simpler.py  summers_end.wmusic  twsxxn.wmusic
