[project]
name = "wavemusic"
version = "0.1.0"
description = "Write music with waves"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pybind11>=2.13.6",
    "setuptools>=78.1.0",
]

[project.optional-dependencies]
optional = [
    "playsound==1.2.2",
]

[tool.uv]
dev-dependencies = [
    "pyinstaller>=6.12.0",
    "pytest>=8.3.5",
    "ruff>=0.11.2",
]

[tool.ruff]
[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # pep8-naming
    "N",
]
